DMC-E系列控制卡例程/VB6.0/例5_总线操作/LTDMC.bas

        
         '手轮运动
         '一个手轮信号控制单个轴运动
        Declare Function dmc_set_handwheel_inmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal inmode As Integer, ByVal multi As Long, ByVal vh As Double) As Integer      '设置输入手轮脉冲信号的工作方式
        Declare Function dmc_get_handwheel_inmode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef inmode As Integer, ByRef multi As Long, ByRef vh As Double) As Integer    '读取输入手轮脉冲信号的工作方式
        Declare Function dmc_set_handwheel_inmode_decimals Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal inmode As Integer, ByVal multi As Double, ByVal vh As Double) As Integer      '设置输入手轮脉冲信号的工作方式
        Declare Function dmc_get_handwheel_inmode_decimals Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef inmode As Integer, ByRef multi As Double, ByRef vh As Double) As Integer    '读取输入手轮脉冲信号的工作方式
         '启动手轮运动
        Declare Function dmc_handwheel_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer         '启动指定轴的手轮脉冲运动
        '3800,3600,5800,5600专用 手轮通道选择
        Declare Function dmc_set_handwheel_channel Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal index As Integer) As Integer
        Declare Function dmc_get_handwheel_channel Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef index As Integer) As Integer
       '3800,3600,5800,5600专用 一个手轮信号控制多轴运动
        Declare Function dmc_set_handwheel_inmode_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal inmode As Integer, ByVal AxisNum As Integer, ByRef axislist As Integer, ByRef multi As Long) As Integer     '设置输入手轮脉冲信号的工作方式
        Declare Function dmc_get_handwheel_inmode_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef inmode As Integer, ByRef AxisNum As Integer, ByRef axislist As Integer, ByRef multi As Long) As Integer   '读取输入手轮脉冲信号的工作方式
        Declare Function dmc_set_handwheel_inmode_extern_decimals Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal inmode As Integer, ByVal AxisNum As Integer, ByRef axislist As Integer, ByRef multi As Double) As Integer     '设置输入手轮脉冲信号的工作方式
        Declare Function dmc_get_handwheel_inmode_extern_decimals Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef inmode As Integer, ByRef AxisNum As Integer, ByRef axislist As Integer, ByRef multi As Double) As Integer   '读取输入手轮脉冲信号的工作方式
        
        Declare Function dmc_handwheel_set_axislist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisSelIndex As Integer, ByVal AxisNum As Integer, ByRef axislist As Integer) As Integer
        Declare Function dmc_handwheel_get_axislist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisSelIndex As Integer, ByRef AxisNum As Integer, ByRef axislist As Integer) As Integer
        Declare Function dmc_handwheel_set_ratiolist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisSelIndex As Integer, ByVal StartRatioIndex As Integer, ByVal RatioSelNum As Integer, ByRef RatioList As Double) As Integer
        Declare Function dmc_handwheel_get_ratiolist Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisSelIndex As Integer, ByVal StartRatioIndex As Integer, ByVal RatioSelNum As Integer, ByRef RatioList As Double) As Integer
        Declare Function dmc_handwheel_set_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal inmode As Integer, ByVal IfHardEnable As Integer) As Integer
        Declare Function dmc_handwheel_get_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef inmode As Integer, ByRef IfHardEnable As Integer) As Integer
        Declare Function dmc_handwheel_set_index Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal AxisSelIndex As Integer, ByVal RatioSelIndex As Integer) As Integer
        Declare Function dmc_handwheel_get_index Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef AxisSelIndex As Integer, ByRef RatioSelIndex As Integer) As Integer
        'Declare Function dmc_handwheel_move Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal ForceMove As Integer) As Integer
        Declare Function dmc_handwheel_stop Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer
        
          '锁存
        Declare Function dmc_set_ltc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal ltc_logic As Integer, ByVal ltc_mode As Integer, ByVal filter As Double) As Integer    '设置LTC信号
        Declare Function dmc_get_ltc_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef ltc_logic As Integer, ByRef ltc_mode As Integer, ByRef filter As Double) As Integer  '读取设置LTC信号
        Declare Function dmc_set_latch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal all_enable As Integer, ByVal latch_source As Integer, ByVal latch_channel As Integer) As Integer     '设置锁存方式
        Declare Function dmc_get_latch_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef all_enable As Integer, ByRef latch_source As Integer, ByRef latch_channel As Integer) As Integer
        '3800,3600,5800,5600专用 LTC反相输出
        Declare Function dmc_SetLtcOutMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal bitno As Integer) As Integer
        Declare Function dmc_GetLtcOutMode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef bitno As Integer) As Integer
        Declare Function dmc_get_latch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer             '读取控制卡内有效锁存个数
        Declare Function dmc_reset_latch_flag Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer       '复位标志
        Declare Function dmc_get_latch_value Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Long           '读取控制卡内锁存值，再连续锁存模式下读取一次控制卡内有效锁存个数将会自动减1,并将锁存值保存在PC缓冲区内
        Declare Function dmc_get_latch_value_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos_by_mm As Double) As Long           '读取控制卡内锁存值，再连续锁存模式下读取一次控制卡内有效锁存个数将会自动减1,并将锁存值保存在PC缓冲区内
        Declare Function dmc_get_latch_flag_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer            '读取PC缓冲区中已保存的已锁存值个数
        Declare Function dmc_get_latch_value_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal index As Integer) As Long  '按索引号读取PC缓冲区中已保存的锁存值，读的时候会将控制卡内的有效锁存值全部保存在PC缓冲区中
        'LTC端口触发延时急停时间 单位us
        Declare Function dmc_set_latch_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal time As Long) As Integer
        Declare Function dmc_get_latch_stop_time Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef time As Long) As Integer
        
        Declare Function dmc_ltc_set_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal ltc_mode As Integer, ByVal ltc_logic As Integer, ByVal filter As Double) As Integer    '设置LTC信号
        Declare Function dmc_ltc_get_mode Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByRef ltc_mode As Integer, ByRef ltc_logic As Integer, ByRef filter As Double) As Integer    '设置LTC信号
        Declare Function dmc_ltc_set_source Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByVal ltc_source As Integer) As Integer
        Declare Function dmc_ltc_get_source Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef ltc_source As Integer) As Integer
        Declare Function dmc_ltc_reset Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer) As Integer
        Declare Function dmc_ltc_get_number Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef number As Integer) As Integer
        Declare Function dmc_ltc_get_value_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal latch As Integer, ByVal axis As Integer, ByRef Value As Double) As Integer
        
         '单轴低速位置比较
        Declare Function dmc_compare_set_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal enable As Integer, ByVal cmp_source As Integer) As Integer       '配置比较器
        Declare Function dmc_compare_get_config Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef enable As Integer, ByRef cmp_source As Integer) As Integer   '读取配置比较器
        Declare Function dmc_compare_clear_points Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer) As Integer          '清除所有比较点
        Declare Function dmc_compare_add_point Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Long, ByVal dir As Integer, ByVal action As Integer, ByVal actpara As Long) As Integer    '添加比较点
        Declare Function dmc_compare_get_current_point Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pos As Long) As Integer    '读取当前比较点
        Declare Function dmc_compare_get_points_runned Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pointNum As Long) As Integer       '查询已经比较过的点
        Declare Function dmc_compare_get_points_remained Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByRef pointNum As Long) As Integer     '查询可以加入的比较点数量
        Declare Function dmc_compare_add_point_cycle Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal cmp As Integer, ByVal pos As Long, ByVal dir As Integer, ByVal bitno As Long, ByVal cycle As Long, ByVal level As Integer) As Integer
        Declare Function dmc_compare_add_point_cycle_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal axis As Integer, ByVal pos As Double, ByVal dir As Integer, ByVal bitno As Long, ByVal cycle As Long, ByVal level As Integer) As Integer
        
        
        '二维低速位置比较
        Declare Function dmc_compare_set_config_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal enable As Integer, ByVal cmp_source As Integer) As Integer           '配置比较器
        Declare Function dmc_compare_get_config_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef enable As Integer, ByRef cmp_source As Integer) As Integer           '读取配置比较器
        Declare Function dmc_compare_clear_points_extern Lib "LTDMC.dll" (ByVal CardNo As Integer) As Integer          '清除所有比较点
        Declare Function dmc_compare_add_point_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef pos As Long, ByRef dir As Integer, ByVal action As Integer, ByVal actpara As Long) As Integer          '添加两轴位置比较点
        Declare Function dmc_compare_add_point_extern_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef axis As Integer, ByRef pos As Double, ByRef dir As Integer, ByVal action As Integer, ByVal actpara As Long) As Integer          '添加两轴位置比较点
        Declare Function dmc_compare_get_current_point_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pos As Long) As Integer    '读取当前比较点
        Declare Function dmc_compare_get_current_point_extern_unit Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pos As Double) As Integer    '读取当前比较点
        Declare Function dmc_compare_get_points_runned_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pointNum As Long) As Integer       '查询已经比较过的点
        Declare Function dmc_compare_get_points_remained_extern Lib "LTDMC.dll" (ByVal CardNo As Integer, ByRef pointNum As Long) As Integer      '查询可以加入的二维比较点数量
         
        Declare Function dmc_compare_set_config_multi Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal queue As Integer, ByVal enable As Integer, ByVal axis As Integer, ByVal cmp_source As Integer) As Integer       '配置比较器
        Declare Function dmc_compare_get_config_multi Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal queue As Integer, ByRef enable As Integer, ByRef axis As Integer, ByRef cmp_source As Integer) As Integer
        Declare Function dmc_compare_add_point_multi Lib "LTDMC.dll" (ByVal CardNo As Integer, ByVal cmp As Integer, ByVal pos As Long, ByVal dir As Integer, ByVal action As Integer, ByVal actpara As Long, ByVal times As Double) As Integer    '添加比较点
